--- a/students.html
+++ b/students.html
@@ -58,4 +58,5 @@
   <script src="js/model.js"></script>
   <script src="js/view.js"></script>
   <script src="js/controller.js"></script>
+  <script src="js/storage.js"></script>
 </html>
